Validate unique index ordering check does not work for clustered collections

XMLWordPrintableJSON

    • Storage Execution
    • Fully Compatible
    • ALL
    • v7.3, v7.0, v6.0
    • Execution Team 2024-03-18, Execution Team 2024-04-01, Execution Team 2024-04-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The validation code that checks unique index ordering incorrectly assumes all RecordIds are Long. We should be decoding RecordIds based on the keyFormat of the collection.

            Assignee:
            Vishnu Kaushik
            Reporter:
            Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: