SERVER-87087 Validate on clustered collections should handle non-long recordIds (#20014)

GitOrigin-RevId: abcb1fb8041f4c987de6f684b6d979c155da4d2a